<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InvoiceType"
        android:textColor="@color/black"
        android:padding="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:gravity="center"
                android:id="@+id/tv_normal"
                android:text="@string/PaperInvoice"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/jiuzhou_orange"
                android:background="@drawable/shape_orangef9f1ef_solid_conner5"
                android:minWidth="110dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_city_select"
                android:layout_gravity="bottom|right"
                android:id="@+id/iv_select_1"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp">
            <TextView
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/tv_vat"
                android:text="@string/VATInvoice"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/shape_grayf6f6f6_solid_conner5"
                android:textColor="@color/resource_gray_585858"
                android:minWidth="110dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_city_select"
                android:layout_gravity="bottom|right"
                android:id="@+id/iv_select_2"
                android:visibility="gone"/>
        </FrameLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e1e1e1"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:text="@string/InvoiceTitle"
        android:id="@+id/invoice_title"
        android:paddingLeft="10dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e1e1e1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:id="@+id/ll_paper">
       <RadioGroup
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:padding="10dp"
           android:id="@+id/rg_type">
           <RadioButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/btn_person"
               android:drawableLeft="@drawable/selector_cb_check"
               android:drawablePadding="10dp"
               android:button="@null"
               android:text="@string/Personal"
               android:checked="true"
               />
           <RadioButton
               android:layout_marginLeft="30dp"
               android:drawablePadding="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:drawableLeft="@drawable/selector_cb_check"
               android:button="@null"
               android:id="@+id/btn_company"
               android:text="@string/Company" />
       </RadioGroup>
       <EditText
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:background="@drawable/shape_grayefefef_solid_conner5"
           android:layout_margin="10dp"
           android:textSize="12sp"
           android:id="@+id/et_company"
           android:gravity="center_vertical"
           android:hint="@string/EnterCompanyName"
           android:paddingLeft="10dp"
           android:paddingRight="10dp"
           android:textColor="@color/black"
           android:visibility="gone"/>
       <EditText
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:background="@drawable/shape_grayefefef_solid_conner5"
           android:layout_margin="10dp"
           android:textSize="12sp"
           android:id="@+id/et_number"
           android:gravity="center_vertical"
           android:hint="@string/TaxpayerIdentificationCode"
           android:paddingLeft="10dp"
           android:paddingRight="10dp"
           android:textColor="@color/black"
           android:visibility="gone"/>
       <View
           android:layout_width="match_parent"
           android:layout_height="1px"
           android:background="#e1e1e1"
           android:layout_marginTop="10dp"
           />
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_vat"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/CompanyName"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/tv_company_name"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/TaxpayerIdentificationCode"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/tv_vat_num"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/Registeredaddress"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/tv_address"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/RegisteredPhoneNumber"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/tv_phone"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/Bank"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/tv_bank_name"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/BankAccount"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/tv_bank_acount"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#e1e1e1" />
    </LinearLayout>

    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:text="@string/Confirm"
        android:textColor="@color/white"
        android:id="@+id/tv_confirm"
        android:background="@color/jiuzhou_orange"
        android:gravity="center"/>
</LinearLayout>