<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/allreview"
            android:textSize="10sp"
            android:minWidth="65dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:id="@+id/btn_1"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:background="@drawable/shape_orange_solid_conner3"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/nice"
            android:textSize="10sp"
            android:minWidth="65dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:id="@+id/btn_2"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:background="@drawable/shape_orange_stroke_white_solid_conner3"
            android:textColor="@color/jiuzhou_orange"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/common"
            android:textSize="10sp"
            android:minWidth="65dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:id="@+id/btn_3"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:background="@drawable/shape_orange_stroke_white_solid_conner3"
            android:textColor="@color/jiuzhou_orange"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/bad"
            android:textSize="10sp"
            android:minWidth="65dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:id="@+id/btn_4"
            android:gravity="center"
            android:background="@drawable/shape_orange_stroke_white_solid_conner3"
            android:textColor="@color/jiuzhou_orange"
            />
    </LinearLayout>
</LinearLayout>