<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <!--确认订单-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/ll_shop"
        android:focusable="true">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:id="@+id/iv_shop"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_shop_name"
            android:textColor="@color/black"
            android:text="商铺名称"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#eeeeee"
        android:id="@+id/view_diver"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_goods"
        android:orientation="vertical"
        >
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#eeeeee"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <com.allen.library.SuperTextView
        android:id="@+id/tv_freight"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:sLeftTextColor="@color/black"
        app:sLeftTextString="@string/Freight"
        app:sRightTextColor="@color/black"
        app:sBottomDividerLineMarginLR="10dp"
       />

    <com.allen.library.SuperTextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:sRightIconRes="@drawable/ic_arrow_right"
        app:sLeftTextString="@string/Invoice"
        app:sLeftTextColor="@color/black"
        app:sRightTextString="@string/Personal"
        app:sRightTextColor="#9b9b9b"
        android:id="@+id/tv_invoice"
        app:sBottomDividerLineMarginLR="10dp">
    </com.allen.library.SuperTextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/Messagefrombuyer"
            android:textColor="@color/black" />
        <cn.hym.superlib.widgets.view.ClearEditText
            android:layout_weight="1"
            android:id="@+id/et_buyer_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:textColor="@color/black"
            android:textColorHint="#9c9c9c"
            android:textSize="14sp"

            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#eeeeee"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <com.allen.library.SuperTextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:sLeftTextString="@string/ShopTotal"
        app:sLeftTextColor="@color/black"
        app:sRightTextColor="@color/jiuzhou_orange"
        android:id="@+id/tv_price"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#eeeeee"/>
</LinearLayout>